adding few tweaks

--- a/index.html
+++ b/index.html
@@ -33,5 +33,8 @@
             </div>
         </div>
     </div>
+    <footer>
+        <span style="color: aquamarine;">Front-end Mentor</span> Challenge &reg; <span style="color: chartreuse;">Coded By </span><span style="font-style: italic; color: cornflowerblue; font-size: 22px;">Phizzle</span> &copy;
+    </footer>
 </body>
 </html>
